clusters/kubernello/example-app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: example
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          resources:
            limits:
              memory: "64Mi"
              cpu: "1"
            requests:
              cpu: "50m"
          ports:
            - containerPort: 80
              name: "http"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: ClusterIP
  selector:
    name: nginx
  ports:
    - port: 80
      targetPort: http
      name: http
